--- a/PanArctic_DSL_download_CMEMS.ipynb
+++ b/PanArctic_DSL_download_CMEMS.ipynb
@@ -372,14 +372,16 @@
    ],
    "source": [
     "# Open and read a file\n",
-    "PHY = xr.open_dataset(OUTPUT_DIRECTORY + \"/20150215_266m_phy_CMEMS.nc\")\n",
+    "PHY = xr.open_dataset(OUTPUT_DIRECTORY + \"/20150716_0m_phy_CMEMS.nc\")\n",
     "print(PHY)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -407,6 +409,197 @@
    "source": [
     "# Plot map of potential temperature at 0 m for Feburary 2015\n",
     "PHY.thetao.sel().plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Global Ocean Biogeochemsitry Hindcast\n",
+    "\n",
+    "I download the [GLOBAL_MULTIYEAR_BGC_001_029](https://resources.marine.copernicus.eu/product-detail/GLOBAL_MULTIYEAR_BGC_001_029/INFORMATION). Data resolution is 0.25 x 0.25 degrees on a ETRS89 (EPSG 4258)  projection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the geographical area and timeseries subset that I want to download. Data is a bit messy and is generally averaged on the 16th of every month, except for February when it is averaged on the 15th. The averaging hours alternates between 00:00:00 and 12:00:00 with no real pattern eiter. So I download data for each year speratately. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Area definition\n",
+    "lon_min = -180\n",
+    "lon_max = 179.75\n",
+    "lat_min = 60\n",
+    "lat_max = 90"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set output directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUT_DIRECTORY = 'data/remote_sensing/biogeochemistry/nc'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup the for loop to download data.\n",
+    "\n",
+    "### 2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 2015 data at 1 m\n",
+      "Finished downloading.\n"
+     ]
+    }
+   ],
+   "source": [
+    "request_tmp = 'python -m motuclient \\\n",
+    "--motu https://my.cmems-du.eu/motu-web/Motu \\\n",
+    "--service-id GLOBAL_MULTIYEAR_BGC_001_029-TDS \\\n",
+    "--product-id cmems_mod_glo_bgc_my_0.25_P1M-m  \\\n",
+    "--longitude-min '+ str(lon_min) +' \\\n",
+    "--longitude-max '+ str(lon_max) +' \\\n",
+    "--latitude-min '+ str(lat_min) +' \\\n",
+    "--latitude-max '+ str(lat_max) +' \\\n",
+    "--date-min \"2015-01-16 12:00:00\" \\\n",
+    "--date-max \"2015-12-16 12:00:00\" \\\n",
+    "--depth-min 0.5057 \\\n",
+    "--depth-max 0.5058 \\\n",
+    "--variable chl --variable nppv --variable o2 \\\n",
+    "--out-dir <OUTPUT_DIRECTORY> \\\n",
+    "--out-name 2015_1m_chl_CMEMS.nc \\\n",
+    "--user <USERNAME> --pwd <PASSWORD>'\n",
+    "print(\"Downloading 2015 data at 1 m\")\n",
+    "# Setup request\n",
+    "data_request_options_dict_automated = motu_option_parser(request_tmp, USERNAME, PASSWORD, OUTPUT_DIRECTORY)\n",
+    "# Download requested data\n",
+    "motuclient.motu_api.execute_request(MotuOptions(data_request_options_dict_automated))\n",
+    "print(\"Finished downloading.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 2016 data at 1 m\n",
+      "Finished downloading.\n"
+     ]
+    }
+   ],
+   "source": [
+    "request_tmp = 'python -m motuclient \\\n",
+    "--motu https://my.cmems-du.eu/motu-web/Motu \\\n",
+    "--service-id GLOBAL_MULTIYEAR_BGC_001_029-TDS \\\n",
+    "--product-id cmems_mod_glo_bgc_my_0.25_P1M-m  \\\n",
+    "--longitude-min '+ str(lon_min) +' \\\n",
+    "--longitude-max '+ str(lon_max) +' \\\n",
+    "--latitude-min '+ str(lat_min) +' \\\n",
+    "--latitude-max '+ str(lat_max) +' \\\n",
+    "--date-min \"2016-01-16 12:00:00\" \\\n",
+    "--date-max \"2016-12-16 12:00:00\" \\\n",
+    "--depth-min 0.5057 \\\n",
+    "--depth-max 0.5058 \\\n",
+    "--variable chl --variable nppv --variable o2 \\\n",
+    "--out-dir <OUTPUT_DIRECTORY> \\\n",
+    "--out-name 2016_1m_chl_CMEMS.nc \\\n",
+    "--user <USERNAME> --pwd <PASSWORD>'\n",
+    "print(\"Downloading 2016 data at 1 m\")\n",
+    "# Setup request\n",
+    "data_request_options_dict_automated = motu_option_parser(request_tmp, USERNAME, PASSWORD, OUTPUT_DIRECTORY)\n",
+    "# Download requested data\n",
+    "motuclient.motu_api.execute_request(MotuOptions(data_request_options_dict_automated))\n",
+    "print(\"Finished downloading.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2017"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 2017 data at 1 m\n",
+      "Finished downloading.\n"
+     ]
+    }
+   ],
+   "source": [
+    "request_tmp = 'python -m motuclient \\\n",
+    "--motu https://my.cmems-du.eu/motu-web/Motu \\\n",
+    "--service-id GLOBAL_MULTIYEAR_BGC_001_029-TDS \\\n",
+    "--product-id cmems_mod_glo_bgc_my_0.25_P1M-m  \\\n",
+    "--longitude-min '+ str(lon_min) +' \\\n",
+    "--longitude-max '+ str(lon_max) +' \\\n",
+    "--latitude-min '+ str(lat_min) +' \\\n",
+    "--latitude-max '+ str(lat_max) +' \\\n",
+    "--date-min \"2017-01-16 12:00:00\" \\\n",
+    "--date-max \"2017-12-16 12:00:00\" \\\n",
+    "--depth-min 0.5057 \\\n",
+    "--depth-max 0.5058 \\\n",
+    "--variable chl --variable nppv --variable o2 \\\n",
+    "--out-dir <OUTPUT_DIRECTORY> \\\n",
+    "--out-name 2017_1m_chl_CMEMS.nc \\\n",
+    "--user <USERNAME> --pwd <PASSWORD>'\n",
+    "print(\"Downloading 2017 data at 1 m\")\n",
+    "# Setup request\n",
+    "data_request_options_dict_automated = motu_option_parser(request_tmp, USERNAME, PASSWORD, OUTPUT_DIRECTORY)\n",
+    "# Download requested data\n",
+    "motuclient.motu_api.execute_request(MotuOptions(data_request_options_dict_automated))\n",
+    "print(\"Finished downloading.\")"
    ]
   },
   {
@@ -533,7 +726,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -547,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
